Add get current user route [Delivers #183451322]
